# ppcm

./: .gitignore  CLAUDE.md  LICENSE  README.md  ansi.py  help_fmt.py  ppcm.py  pyproject.toml  tui_list.py
.github/workflows/: release.yml
samples/: algessseumnida.pcm  annyeonghaseyo.pcm  baegopa.pcm  baram_buroyo.pcm  biga_oneyo.pcm  dasi_malhaejuseyo.pcm  eodie_isseoyo.pcm  gamsahamnida.pcm  gapsi_eolmayo.pcm  haega_tteyo.pcm  hoeui_sijak.pcm  hwajangsil_eodie.pcm  illo_ilda.pcm  jal_jinaeseyo.pcm  jaryo_bonaeju.pcm  jigeum_myeotsi.pcm  jihacheol_tayo.pcm  joesonghamnida.pcm  keopi_han_jan.pcm  mannaseo_bangawoyo.pcm  mashisseo.pcm  moreugesseoyo.pcm  mwo_meogulkayo.pcm  naeil_mannaryo.pcm  nal_chuwo.pcm  oneul_mueun_yo.pcm  oneul_nalssi_johne.pcm  ramyeon_meogja.pcm  sessi_sipobun.pcm  yeogi_eotteoke_gayo.pcm
src/: tui_list.py  tui_play.py
src/ppcm/: cli.py  help_fmt.py  pcm_utils.py  tui_list.py
